@@ -1,21 +1,0 @@
-2001-04-11  Martin Baulig  <baulig@suse.de>
-
-	* gnome-maketypes.awk.in: Do some renaming magic to have types
-	called `GDK_TYPE_*', `GTK_TYPE_*' and `GNOME_TYPES_*'.
-
-	* gnome-makeenums.pl, gnome-maketypes.awk.in: Use gobject here;
-	removed all references to GTK+.
-
-2001-03-24  Martin Baulig  <baulig@suse.de>
-
-	* gnome-maketypes.awk.in: Allow `#f' for the boxed-init func;
-	use #f or #f for boxed-is-refcounted.
-
-2001-03-21  Martin Baulig  <baulig@suse.de>
-
-	* gnome-makeenums.pl: New file. This was formerly known
-	as gnome-libs/libgnomeui/makeenums.pl.
-
-	* gnome-maketypes.awk.in: New file. This was formerly
-	known as gnome-libs/libgnomeui/maketypes.awk.
-
