@@ -1,5 +1,13 @@
 2001-08-09  Martin Baulig  <baulig@suse.de>
 
+	* tools/*: Removed.
+
+	* configure.in, Makefile.am: Reverted Darin's last change here,
+	all we need to do is to remove the check for this stuff in
+	libgnomeui's configure.in, it isn't used anymore.
+
+2001-08-09  Martin Baulig  <baulig@suse.de>
+
 	* configure.in: Don't check for CSL anymore.
 
 2001-08-06  Darin Adler  <darin@bentspoon.com>
